Changed modal and added data

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <div class="column four wide centered">
             <button class="ui olive button" onclick="getMovies(BEST_URL)">Mejores puntuadas</button>
         </div>
-
     </header>
 
     <section class="ui container center aligned">
@@ -37,8 +36,8 @@
     </section>
         
     <main class="ui centered">
-        <div id="output" class="ui centered output">
-        </div>
+        <div id="output" class="ui centered output"> </div>
+        <div id="modal"></div>
         <div id="output-modal"></div>
     </main>
 </body>
