Added search by genre

--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
         </div>
     </header>
 
+    <section class="genre-container">
+        <div class=" genre-buttons">
+            <button class="ui button" onclick="getMovies(createGenreUrl(28))">Acción</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(16))">Animadas</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(878))">Ciencia Ficción</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(35))">Comedia</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(80))">Crimen</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(99))">Documental</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(18))">Drama</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(14))">Fantasia</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(10402))">Musicales</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(10749))">Romance</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(53))">Suspenso</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(27))">Terror</button>
+            <button class="ui button" onclick="getMovies(createGenreUrl(37))">Western</button>
+          </div>
+
+    </section>
+
     <section class="ui container center aligned">
         <h1>Movie App</h1>
         <div class="ui action input">
