--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="img/favicon_io/site.webmanifest">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.css">
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/semantic-ui@2.4.2/dist/semantic.min.js"></script>
@@ -24,14 +28,12 @@
                 <button class="ui olive button" onclick="getMovies(BEST_URL)">Mejores puntuadas</button>
             </div>
         </div>
-        
     </header>
-
     
-
     <section class="genre-container-dropdown">
-        <div class="ui floating dropdown labeled icon button black">
-            <i class="filter icon orange"></i>
+        <div id="genre-container-dropdown"></div>
+        <div class="ui floating dropdown labeled icon button">
+            <i class="filter icon"></i>
             <span class="text">Categorías</span>
             <div class="menu">
                 <div class="scrolling menu">
@@ -131,7 +133,20 @@
         </div>
     </section> 
     <main class="ui centered">
-        <div id="output" class="ui centered output"> </div>
+        <div class="ui centered output-box" > 
+            <div id="output-buttons"></div>
+            <!-- <div class="output-buttons">
+                <button class="compact ui button" id="previus" onclick="substractPages(num)">Anterior</button>
+                <span class="ui compact output-buttons-num" id="number"></span>
+                <button class="compact ui button" id="next" onclick="()=>addPages(num)">Siguiente</button>
+            </div> -->
+            <!-- <div class="output-buttons">
+                <button class="compact ui button" id="previus">Anterior</button>
+                <span class="ui compact output-buttons-num" id="number"></span>
+                <button class="compact ui button" id="next">Siguiente</button>
+            </div> -->
+            <div id="output" class="ui centered output"></div>
+        </div>
         <div id="modal"></div>
         <div id="output-modal"></div>
     </main>
