Feat: add search text. Style: fix search style

--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 
     <main class="ui centered">
         <div class="ui centered output-box">
+            <div id="output-search"></div>
             <div id="output-error"></div>
             <div id="output" class="ui centered output"></div>
-            <div class="output-buttons" id="output-buttons">
+            <div class="output-buttons hide" id="output-buttons">
                 <button class="compact ui button page-buttons teal" id="prev"> <i class="angle double left icon"></i></button>
                 <span class="ui compact output-buttons-num" id="number">1</span>
                 <button class="compact ui button page-buttons teal" id="next"> <i class="angle double right icon"></i></button>
@@ -68,7 +69,7 @@
         </div>
         <div id="modal"></div>
     </main>
-    
+
     <button id="btnTop" class="btnTop hide"><i class="big angle up icon"></i></button>
 </body>
 </html>
