Fix style in header nav

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <div class="header">
+        <div class="header-nav">
             <div>
                 <button class="ui teal button" id="popular">Más populares</button>
             </div>
